--- a/test.Rmd
+++ b/test.Rmd
@@ -10,15 +10,19 @@ output:
 
 ```{r setup, include=FALSE}
 
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, cahce = TRUE)
 
 library(shiny)
 library(readr)
 library(tidyverse)
 library(networkD3)
 library(plotly)
+library(readr)
+library(statnet)
 
-fed = read.csv("https://www.dropbox.com/s/18h5ppnj3srrxbx/r73_13_recoded_flows.csv?dl=1")
+fed = read.csv("r73_13_recoded_flows.csv")
+ref = read.csv("fed_agency_capacity_autonomy.csv")
+
 
 fed = fed %>%
     filter(AGYSUB_next != "EXIT") %>%
@@ -71,17 +75,16 @@ ggplotly(p) %>%
 
 fluidRow(
         column(3,
-            sliderInput("year",
+            numericInput("year",
                         "Year:",
-                        ticks = FALSE,
-                        min = 1973,
+                        min = 1974,
                         max = 2012,
-                        value = 1990)),
+                        value = 1974)),
         column(3,    
             sliderInput("nmin",
                          "Min Agency Size:",
                         min = 1, max = max(fed$n),
-                        value = 20000)),
+                        value = 10000)),
         column(2,    
                numericInput("send",
                            "Min. Sent:",
@@ -98,10 +101,21 @@ fluidRow(
 
 renderForceNetwork({
         # generate bins based on input$bins from ui.R
-        df = fed %>%
+    
+        if (input$EPA == TRUE){
+            df = fed %>%
+            filter(yr == input$year) %>%
+            filter(n >= input$nmin) %>%
+            filter(n_next >= input$send[1], n_next <= 2000) %>%
+            filter(AGYSUB == "EP00" | AGYSUB_next == "EP00")
+            
+        } else {
+            df = fed %>%
             filter(yr == input$year) %>%
             filter(n >= input$nmin) %>%
             filter(n_next >= input$send[1], n_next <= 2000)
+        }
+    
         
         sources = df %>%
             distinct(AGYSUB) %>%
@@ -155,7 +169,114 @@ renderForceNetwork({
 
 ```
 
-## Breakfast
+# ERGM
+
+```{r}
+
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) %>%
+  filter(n >= 5000) %>%
+  filter(n_nextpct <= .5) 
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+#### Add covariates to nodes
+
+ref2 = ref %>%
+  filter(yr == 1990) %>%
+  select(AGYSUB, n, agy_typ, med_sal_)
+
+nodes = nodes %>%
+  left_join(ref2, by = c("label" = "AGYSUB")) %>%
+  drop_na()
+
+#### Make edges
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_next > 0, 1, 0)) 
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected)
+
+df2 = df2 %>%
+  left_join(nodes, by = c("AGYSUB" = "label")) %>%
+  rename(from = id)
+
+df2 = df2 %>%
+  left_join(nodes, by = c("AGYSUB_next" = "label")) %>%
+  rename(to = id)
+
+df2 = df2 %>%
+  filter(from != to) %>%
+  filter(connected == 1)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+```
+
+## Simple ERGM Code
+
+```{r, echo = TRUE}
+
+set.seed(442210)
+
+model1 = ergm(fednetwork ~ edges + nodecov("med_sal_") + 
+                nodematch("agy_typ") +
+                nodecov("n") +
+                mutual + gwidegree(2), 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+## Results
+
+```{r}
+
+gof1 = gof(model1)
+
+par(mfrow=c(3,2))
+plot(gof1)
+
+
+```
+
+## MCMC Diagnostics
+
+```{r, results='hide'}
+
+mcmc.diagnostics(model1)
+
+```
+
+## Rando
 
 - Eat eggs
 - Drink coffee
