--- a/test.Rmd
+++ b/test.Rmd
@@ -280,7 +280,7 @@ renderForceNetwork({
 
 ## TERGM
 
-```{r, results='hide'}
+```{r}
 
 
 years = seq(1974, 2012, by = 1)
@@ -310,7 +310,7 @@ for (i in 1:length(years)) {
   
   df = fed %>%
     filter(yr == years[i]) %>%
-    filter(n >= 5000) %>%
+    filter(n >= 1000) %>%
     filter(n <= 20000) %>%
     filter(n_nextpct <= .5)
   
@@ -364,6 +364,14 @@ for (i in 1:length(years)) {
 
 sampdyn = networkDynamic(network.list = nets, vertex.pid = "vertex.names")
 
+
+
+```
+
+## Tergm2
+
+```{r, results='asis'}
+
 render.d3movie(sampdyn, 
                plot.par=list(displaylabels=T), 
                label = network.vertex.names(sampdyn), 
@@ -372,11 +380,9 @@ render.d3movie(sampdyn,
                                show.stats= "~edges+triangles",
                                extraPlotCmds=NULL,
                                initial.coords=0),
-               d3.options = list(animateOnLoad = TRUE, animationDuration = 3000,
+               d3.options = list(animateOnLoad = FALSE, animationDuration = 3000,
                                  durationControl=TRUE),
-               output.mode = 'htmlWidget')
-
-
+               output.mode = 'inline')
 
 ```
 
