--- a/test.Rmd
+++ b/test.Rmd
@@ -4,8 +4,9 @@ author: "Blain Morin"
 date: "4/7/2021"
 runtime: shiny
 output: 
-    ioslides_presentation:
-        widescreen: true
+    ioslides_presentation: 
+      widescreen: yes
+      transition: slower
 ---
 
 ```{r setup, include=FALSE}
@@ -22,8 +23,8 @@ library(statnet)
 library(ndtv)
 library(latticeExtra)
 
-fed = read.csv("r73_13_recoded_flows.csv")
-ref = read.csv("fed_agency_capacity_autonomy.csv")
+ref = read.csv("https://www.dropbox.com/s/xtt4emmz6txtbun/fed_agency_capacity_autonomy.csv?dl=1")
+fed = read.csv("https://www.dropbox.com/s/18h5ppnj3srrxbx/r73_13_recoded_flows.csv?dl=1")
 
 
 fed = fed %>%
@@ -373,7 +374,7 @@ sampdyn = networkDynamic(network.list = nets, vertex.pid = "vertex.names")
 ```{r, results='asis'}
 
 render.d3movie(sampdyn, 
-               plot.par=list(displaylabels=T), 
+               plot.par=list(displaylabels=T, label.cex = .45), 
                label = network.vertex.names(sampdyn), 
                render.par=list(tween.frames=10,
                                show.time=TRUE,
