--- a/test.Rmd
+++ b/test.Rmd
@@ -184,70 +184,114 @@ renderForceNetwork({
 
 # ERGM
 
+## Simplified
+
 ```{r}
 
-# #### Data Cleaning
-# df = fed %>%
-#   filter(yr == 1990) %>%
-#   filter(n >= 5000) %>%
-#   filter(n_nextpct <= .5) 
-# 
-# 
-# #### Make nodes
-# sources = df %>%
-#   distinct(AGYSUB) %>%
-#   rename(label = AGYSUB)
-# 
-# destinations = df %>%
-#   distinct(label = AGYSUB_next)
-# 
-# nodes = full_join(sources, destinations, by = "label")
-# 
-# nodes = nodes %>%
-#   rowid_to_column("id")
-# 
-# #### Add covariates to nodes
-# 
-# ref2 = ref %>%
-#   filter(yr == 1990) %>%
-#   select(AGYSUB, n, agy_typ, med_sal_)
-# 
-# nodes = nodes %>%
-#   left_join(ref2, by = c("label" = "AGYSUB")) %>%
-#   drop_na()
-# 
-# #### Make edges
-# 
-# agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
-# 
-# agy_set = agy_set %>%
-#   filter(as.character(Var1) != as.character(Var2)) %>%
-#   rename(AGYSUB = Var1, AGYSUB_next = Var2)
-# 
-# df2 = agy_set %>%
-#   left_join(df) %>%
-#   mutate(connected = ifelse(n_next > 0, 1, 0)) 
-# 
-# df2$connected = replace_na(df2$connected, 0)
-# 
-# df2 = df2 %>%
-#   select(AGYSUB, AGYSUB_next, connected)
-# 
-# df2 = df2 %>%
-#   left_join(nodes, by = c("AGYSUB" = "label")) %>%
-#   rename(from = id)
-# 
-# df2 = df2 %>%
-#   left_join(nodes, by = c("AGYSUB_next" = "label")) %>%
-#   rename(to = id)
-# 
-# df2 = df2 %>%
-#   filter(from != to) %>%
-#   filter(connected == 1)
-# 
-# #### Make network
-# 
-# fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+########### Data Cleaning
+
+df = ref %>%
+  filter(yr != 1973) %>%
+  filter(yr >= 1974) %>%
+  filter(yr < 2014) %>% 
+  filter(med_sal_ > 0) %>% 
+  filter(n > 5000) %>%
+  drop_na(med_sal_) %>%
+  filter(AGYSUB != "TOTL")%>%
+  filter(agy_full != "Dept. of Veterans Affairs") %>%
+  filter(!grepl("NET", agy_full))
+
+years = seq(1980,1990, by = 1)
+
+addon = df %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr) %>%
+  filter(yr == years[length(years)])
+
+res = df %>%
+  filter(yr %in% years) %>%
+  group_by(agy_full) %>%
+  summarise(ma_diff = ma_pct[which.max(yr)] - ma_pct[which.min(yr)],
+            phd_diff = doc_pct[which.max(yr)] - doc_pct[which.min(yr)],
+            budget_diff = (b18_roll[which.max(yr)] - b18_roll[which.min(yr)]) / b18_roll[which.min(yr)],
+            dbudget_diff = (b18_d_roll[which.max(yr)] - b18_d_roll[which.min(yr)]) / b18_d_roll[which.min(yr)],
+            nyear = n()) %>%
+  ungroup() %>%
+  filter(nyear == length(years))
+
+fres = res %>%
+  left_join(addon)
+
+
+####################################################
+#### NODES
+######################################
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) %>%
+  filter(n_nextpct <= .5)
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = fres %>%
+  left_join(nodes, by = c("AGYSUB" = "label"))
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+
+###################################3
+#### Make edges
+#######################
+
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_next >= 5, 1, 0))
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected) %>%
+  filter(connected == 1) %>%
+  filter(AGYSUB %in% nodes$AGYSUB & AGYSUB_next %in% nodes$AGYSUB)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+```
+
+```{r, results = 'asis'}
+
+set.seed(442210)
+
+render.d3movie(fednetwork, 
+               plot.par=list(displaylabels=T, label.cex = .45), 
+               label = network.vertex.names(fednetwork), 
+               render.par=list(tween.frames=10,
+                               show.time=TRUE,
+                               show.stats= "~edges+triangles",
+                               extraPlotCmds=NULL,
+                               initial.coords=0),
+               d3.options = list(animateOnLoad = FALSE, animationDuration = 3000,
+                                 durationControl=TRUE),
+               output.mode = 'inline')
+
 
 ```
 
@@ -255,12 +299,101 @@ renderForceNetwork({
 
 ```{r, echo = TRUE}
 
+set.seed(442210)
+model1 = ergm(fednetwork ~ edges, 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+## Summary Null Model
+
+```{r}
+
+summary(model1)
+
+```
+
+
+## Simple ERGM add covariate
+
+```{r, echo = TRUE}
+
+set.seed(442210)
+model2 = ergm(fednetwork ~ edges + nodeicov("budget_diff"), 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+## Summary Model 2
+
+```{r}
+
+summary(model2)
+
+```
+
+## Add Another Node Cov
+
+```{r, echo = TRUE}
+
+set.seed(442210)
+model3 = ergm(fednetwork ~ edges + nodeicov("budget_diff") + nodematch("agy_typ") + absdiff("med_sal_"), 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+## Summary Model3
+
+```{r}
+
+summary(model3)
+
+```
+
+## Add endog
+
+```{r}
+
+set.seed(442210)
+model4 = ergm(fednetwork ~ edges + 
+                nodeicov("budget_diff") + 
+                nodematch("agy_typ") + 
+                gwidegree(2), 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+
+```{r}
+
+summary(model4)
+
+```
+## More complex
+
+```{r, echo = TRUE}
+
 # set.seed(442210)
-# 
-# model1 = ergm(fednetwork ~ edges + nodecov("med_sal_") + 
+# model1 = ergm(fednetwork ~ edges + nodecov("med_sal_") +
 #                 nodematch("agy_typ") +
 #                 nodecov("n") +
-#                 mutual + gwidegree(2), 
+#                 mutual + gwidegree(2),
 #              control=control.ergm(
 #                MCMC.samplesize=20000,
 #                MCMC.burnin=500000,
