--- a/test.Rmd
+++ b/test.Rmd
@@ -5,6 +5,7 @@ date: "4/7/2021"
 runtime: shiny
 output: 
     ioslides_presentation: 
+      logo: drain.png
       widescreen: yes
       transition: slower
 ---
@@ -34,13 +35,21 @@ fed = fed %>%
 ```
 
 
-# Introduction
+# Introduction 
 
-## Background
+![](drain.png)
 
-* In the disaster literature, networks of actors form to address complex problem
-* Prior studies look at the communication networks that form during these events
+## Background 
+
+* Interested in a descriptive historical of the capacity of environmental agencies 
 * *Capacity*: The resources and professionalization required to accomplish tasks and goals. 
+
+<div class="notes">
+This is my *note*.
+
+- It can contain markdown
+- like this list
+</div>
 
 ## Motivation
 
@@ -80,9 +89,12 @@ ggplotly(p) %>%
 
 ## Source
 
-* Buzzfeed FOAI request
+* Buzzfeed Freedom of Information Act (FOAI) request
+   * Four Decades of payroll data from The U.S. Office of Personnel Management
+   * From 1973 to 2013, the data are uniquely identified. This allows us to track their migrations into, out of, and through federal agencies.
+   
 
-## Network Visualization 
+## Data Visualization 
 
 ```{r}
 
@@ -182,9 +194,9 @@ renderForceNetwork({
 
 ```
 
-# ERGM
+# ERGM Stuff
 
-## Simplified
+## Simple Start: Cross-Sectional Binary Directed Edges
 
 ```{r}
 
@@ -204,7 +216,7 @@ df = ref %>%
 years = seq(1980,1990, by = 1)
 
 addon = df %>%
-  select(agy_full, med_sal_, agy_typ, AGYSUB, yr) %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr, n) %>%
   filter(yr == years[length(years)])
 
 res = df %>%
@@ -261,7 +273,7 @@ agy_set = agy_set %>%
 
 df2 = agy_set %>%
   left_join(df) %>%
-  mutate(connected = ifelse(n_next >= 5, 1, 0))
+  mutate(connected = ifelse(n_nextpct >= .05, 1, 0))
 
 df2$connected = replace_na(df2$connected, 0)
 
@@ -296,26 +308,6 @@ render.d3movie(fednetwork,
 ```
 
 ## Simple ERGM Code
-
-```{r, echo = TRUE}
-
-set.seed(442210)
-model1 = ergm(fednetwork ~ edges, 
-             control=control.ergm(
-               MCMC.samplesize=20000,
-               MCMC.burnin=500000,
-               MCMLE.maxit=10,
-               parallel = 4))
-
-```
-
-## Summary Null Model
-
-```{r}
-
-summary(model1)
-
-```
 
 
 ## Simple ERGM add covariate
@@ -370,7 +362,8 @@ set.seed(442210)
 model4 = ergm(fednetwork ~ edges + 
                 nodeicov("budget_diff") + 
                 nodematch("agy_typ") + 
-                gwidegree(2), 
+                absdiff("med_sal_") +
+                gwodegree(2), 
              control=control.ergm(
                MCMC.samplesize=20000,
                MCMC.burnin=500000,
