--- a/test2.Rmd
+++ b/test2.Rmd
@@ -129,11 +129,173 @@ So here we're looking at the employees that either left another agency to work a
 
 ???
 
-So here's a familiar looking thing. 
+Here's a familiar looking thing. This widget shows the network of agencies. The size of the circle is the size of the agency in terms of employees and the width of the arrows represent the number of employees that moved from or to the agency. Here I'm filtering to just the nodes that interacted with the EPA. We can click through the years. A priori I would have guessed that (I'm not a content expert on the EPA or federal agencies) that more of these migrations would be toward similar mission agencies.
+
+Toggling the EPA filter off we see a more complete network. There's something like 200 unique agency nodes, here we have them filtered to just ones that are greater than 10,000 workers. The network gets very dense as you decrease the threshold of employees for the edges, so as you can see at one we get a pretty nice spaghetti plot. 
+
+---
+class: inverse, middle, center
+
+# ERGM Stuff
+
+.center[
+<img src="drain2.png" style="width: 40%"/>
+]
+
+???
+
+To the modeling bit. Quick preface, this is very much a work in progress. 
 
 ---
 
-# Hello World
+### Simple Start: Cross-Sectional Binary Directed Edges
+
+
+```{r}
+
+########### Data Cleaning
+
+df = ref %>%
+  filter(yr != 1973) %>%
+  filter(yr >= 1974) %>%
+  filter(yr < 2014) %>% 
+  filter(med_sal_ > 0) %>% 
+  filter(n > 5000) %>%
+  drop_na(med_sal_) %>%
+  filter(AGYSUB != "TOTL")%>%
+  filter(agy_full != "Dept. of Veterans Affairs") %>%
+  filter(!grepl("NET", agy_full))
+
+years = seq(1980,1990, by = 1)
+
+addon = df %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr, n) %>%
+  filter(yr == years[length(years)])
+
+res = df %>%
+  filter(yr %in% years) %>%
+  group_by(agy_full) %>%
+  summarise(ma_diff = ma_pct[which.max(yr)] - ma_pct[which.min(yr)],
+            phd_diff = doc_pct[which.max(yr)] - doc_pct[which.min(yr)],
+            budget_diff = (b18_roll[which.max(yr)] - b18_roll[which.min(yr)]) / b18_roll[which.min(yr)],
+            dbudget_diff = (b18_d_roll[which.max(yr)] - b18_d_roll[which.min(yr)]) / b18_d_roll[which.min(yr)],
+            nyear = n()) %>%
+  ungroup() %>%
+  filter(nyear == length(years))
+
+fres = res %>%
+  left_join(addon)
+
+
+####################################################
+#### NODES
+######################################
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) %>%
+  filter(n_nextpct <= .5)
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = fres %>%
+  left_join(nodes, by = c("AGYSUB" = "label"))
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+
+###################################3
+#### Make edges
+#######################
+
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_nextpct >= .05, 1, 0))
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected) %>%
+  filter(connected == 1) %>%
+  filter(AGYSUB %in% nodes$AGYSUB & AGYSUB_next %in% nodes$AGYSUB)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+```
+
+```{r, results = 'asis'}
+
+set.seed(442210)
+
+render.d3movie(fednetwork, 
+               plot.par=list(displaylabels=T, label.cex = .45), 
+               label = network.vertex.names(fednetwork), 
+               render.par=list(tween.frames=10,
+                               show.time=TRUE,
+                               show.stats= "~edges+triangles",
+                               extraPlotCmds=NULL,
+                               initial.coords=0),
+               d3.options = list(animateOnLoad = FALSE, animationDuration = 3000,
+                                 durationControl=TRUE),
+               output.mode = 'inline')
+
+
+```
+
+???
+
+Here is what the test network looks like. As you can see, I've thinned it quite a bit, down to 36 vertices. Here I've limited the network to agencies with greater than 5,000 employees. These directional edges are binary, signaling that the sending agency sent greater than or equal to 5% of its employees.  
+
+---
+
+# Exogenous covariate model
+
+* The network year is 1990
+
+* Test model with just exogenous covariates
+    * *budget_diff*: The proportional increase or decrease in the agency's budget since 1980.
+    * *agy_type*: The agency functional classification (for example EPA type = "Environment and Natural Resources")
+    * *med_sal*: The median salary at an agency
+
+```{r, echo = TRUE}
+
+set.seed(442210)
+model1 = ergm(fednetwork ~ edges + 
+                nodeicov("budget_diff") + 
+                nodematch("agy_typ") + 
+                absdiff("med_sal_"), 
+             control=control.ergm(
+               MCMC.samplesize=20000,
+               MCMC.burnin=500000,
+               MCMLE.maxit=10,
+               parallel = 4))
+
+```
+
+---
+# Exogenous Results
+
+
+
+---
 
 Install the **xaringan** package from [Github](https://github.com/yihui/xaringan):
 
