--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,3 +11,14 @@
   abstract = {Responding to recent articles in Governance highlighting the need for improved measurement of bureaucratic characteristics, this article describes efforts to map Brazil's federal agencies on three dimensions—capacity, autonomy, and partisan dominance—derived from data on more than 326,000 civil servants. The article provides a “proof of concept” about the utility of agency-level measures of these variables, demonstrating how they relate to an output common to all agencies: corruption. The article provides a first step in the direction of building a comparative research program that offers objective evaluation of bureaucracies within nation-states, with the intent of better disentangling their impact on governance outcomes.},
 year = {2017}
 }
+
+@article{fukuyama,
+author = {Fukuyama, Francis},
+year = {2016},
+month = {06},
+pages = {},
+title = {Governance: What Do We Know, and How Do We Know It?},
+volume = {19},
+journal = {Annual Review of Political Science},
+doi = {10.1146/annurev-polisci-042214-044240}
+}
